--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,10 @@ spring:
     url: r2dbc:postgresql://localhost:5432/postgres?schema=anime
     username: postgres
     password: postgres
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          r2dbc: DEBUG
